Grid_avg_evolution/slurm-13324669.out
  File "/users/boeiradi/COLD_project/postprocessing/waom_notebook/Grid_avg_evolution/WAOM4extend_shflim_S_0.25Q_OHC+OSC+MKE_evolution_shelf.py", line 139
    d ROMS 4km:
      ^
SyntaxError: invalid syntax
srun: error: r06c60: task 0: Exited with exit code 1
srun: launch/slurm: _step_signal: Terminating StepId=13324669.0
